--- a/p3.html
+++ b/p3.html
@@ -25,7 +25,7 @@
   <!-- Nav tabs -->
   <ul class="nav nav-tabs d-flex justify-content-center " role="tablist">
     <li class="nav-item">
-      <a href="index.html"> <img src="imagens/logo.png" width="25%"> </a>
+      <a href="index.html"> <img src="images/logo.png" width="25%"> </a>
     </li>
     <li class="nav-item">
       <a class="nav-link " data-bs-toggle="Tab" href="index.html">Home</a>
