--- a/p2.html
+++ b/p2.html
@@ -25,7 +25,7 @@
  <!-- Nav tabs -->
  <ul class="nav nav-tabs d-flex justify-content-center " role="tablist">
   <li class="nav-item">
-    <a href="index.html"> <img src="imagens/logo.png" width="25%"> </a>
+    <a href="index.html"> <img src="images/logo.png" width="25%"> </a>
   </li>
   <li class="nav-item">
     <a class="nav-link " data-bs-toggle="Tab" href="index.html">Home</a>
@@ -58,7 +58,7 @@
 
     <!-- imagem, video e carrosel -->
     <div>
-    <img src="imagens/colmeia.jpg" class="mx-auto d-block rounded ratio ratio-16x9">
+    <img src="images/colmeia.jpg" class="mx-auto d-block rounded ratio ratio-16x9">
     <br>
 
       <div class="ratio ratio-16x9">
@@ -79,15 +79,15 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="imagens/abelha1.jpg" alt="abelha" class="d-block" style="width:100%">
+      <img src="images/abelha1.jpg" alt="abelha" class="d-block" style="width:100%">
     </div>
 
     <div class="carousel-item">
-      <img src="imagens/abelha2.jpg" alt="abelha" class="d-block" style="width:100%">
+      <img src="images/abelha2.jpg" alt="abelha" class="d-block" style="width:100%">
     </div>
 
     <div class="carousel-item">
-      <img src="imagens/abelha3.jpg" alt="abelha" class="d-block" style="width:100%">
+      <img src="images/abelha3.jpg" alt="abelha" class="d-block" style="width:100%">
     </div>
   </div>
   
