--- a/code/index.html
+++ b/code/index.html
@@ -26,33 +26,9 @@
 
 <div class="container mt-3">
 
-  <!-- Nav tabs -->
-  <!-- <ul class="nav nav-tabs d-flex justify-content-center " role="tablist">
-    <li class="nav-item">
-      <a href="index.html"> <img src="images/logo.png" width="25%"> </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" data-bs-toggle="Tab" href="index.html">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="Tab" href="p2.html">Página 1</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="Tab" href="p3.html">Página 2</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="Tab" href="p4.html">Página 3</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="Tab" href="p5.html">Página 4</a>
-    </li>
-  </ul>
-  <br> -->
-
-  
     <!-- Menu de navegação -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#"><img src="images/logo.png" width="25%"></a>
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="25%"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon">
               <img src="images/hamburger.png" alt="Hamburguer" width="30">
@@ -60,7 +36,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
+              <li class="nav-item active ">
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
@@ -75,9 +51,9 @@
               <li class="nav-item">
                   <a class="nav-link" href="p5.html">Página 4</a>
               </li>
-          </ul>
-      </div>
-  </nav>
+            </ul>
+        </div>
+    </nav>
 
 
 
@@ -198,7 +174,7 @@
 
   <!-- Copyright -->
   <div class="text-center p-4">
-    © 2021 Copyright: HONEY FRESH
+    © 2024 Copyright: HONEY FRESH
   </div>
   <!-- Copyright -->
 </footer>
