--- a/code/p2.html
+++ b/code/p2.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   
   <!-- Font Awesome -->
   <link
@@ -22,29 +26,35 @@
 
 <div class="container mt-3">
 
- <!-- Nav tabs -->
- <ul class="nav nav-tabs d-flex justify-content-center " role="tablist">
-  <li class="nav-item">
-    <a href="index.html"> <img src="images/logo.png" width="25%"> </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link " data-bs-toggle="Tab" href="index.html">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active" data-bs-toggle="Tab" href="p2.html">Página 1</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" data-bs-toggle="Tab" href="p3.html">Página 2</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" data-bs-toggle="Tab" href="p4.html">Página 3</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" data-bs-toggle="Tab" href="p5.html">Página 4</a>
-  </li>
-</ul>
-<br>
-
+ 
+    <!-- Menu de navegação -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="25%"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon">
+              <img src="images/hamburger.png" alt="Hamburguer" width="30">
+          </span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item active">
+                  <a class="nav-link" href="p2.html">Página 1</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="p3.html">Página 2</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="p4.html">Página 3</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="p5.html">Página 4</a>
+              </li>
+            </ul>
+        </div>
+    </nav>
   <!-- Tab panes -->
   <div class="tab-content">
 
@@ -206,7 +216,7 @@
 
   <!-- Copyright -->
   <div class="text-center p-4">
-    © 2021 Copyright: HONEY FRESH
+    © 2024 Copyright: HONEY FRESH
   </div>
   <!-- Copyright -->
 </footer>
