--- a/code/p4.html
+++ b/code/p4.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
   
   <!-- Font Awesome -->
   <link
@@ -22,39 +27,54 @@
 
 <div class="container mt-3">
 
- <!-- Nav tabs -->
- <ul class="nav nav-tabs d-flex justify-content-center " role="tablist">
-  <li class="nav-item">
-    <a href="index.html"> <img src="images/logo.png" width="25%"> </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link " data-bs-toggle="Tab" href="index.html">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" data-bs-toggle="Tab" href="p2.html">Página 1</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" data-bs-toggle="Tab" href="p3.html">Página 2</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active" data-bs-toggle="Tab" href="p4.html">Página 3</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" data-bs-toggle="Tab" href="p5.html">Página 4</a>
-  </li>
-</ul>
-<br>
+ 
+    <!-- Menu de navegação -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="25%"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon">
+              <img src="images/hamburger.png" alt="Hamburguer" width="30">
+          </span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item ">
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="p2.html">Página 1</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="p3.html">Página 2</a>
+              </li>
+              <li class="nav-item active">
+                  <a class="nav-link" href="p4.html">Página 3</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="p5.html">Página 4</a>
+              </li>
+            </ul>
+        </div>
+    </nav>
+
   <!-- Tab panes -->
   <div class="tab-content">
-
-    <!-- texto -->
-    <div  class="container tab-pane active"><br>
-      <h3 class="text-md-start">Formulario</h3>
-      <p>Lorem ipsum dolor Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae amet quis voluptatibus placeat ea. Mollitia illum eos fugiat esse! Expedita facilis perferendis magnam corrupti nulla excepturi, sequi culpa veniam. Dolorem? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex aperiam est et optio rem, impedit nam illum culpa totam. At officia porro itaque aliquam, ab esse id? Ipsum, adipisci sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quia velit rerum necessitatibus cupiditate. Eaque consequatur provident nobis maiores soluta eos error, rem autem corporis odio aliquam, placeat cupiditate quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, ut dolorem doloremque delectus eligendi commodi nemo consectetur consequuntur neque dignissimos voluptate nisi corrupti quos labore reiciendis nulla sed impedit harum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque vero accusantium nemo quibusdam libero quaerat dolorem neque qui illum. Eligendi delectus aliquid, quam impedit at mollitia accusantium iste porro odio. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate maxime beatae distinctio dignissimos nisi sint amet quia similique labore nemo doloribus, repellat commodi dolore quidem quasi architecto in? Beatae, omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit doloribus nihil odio dicta vel voluptatibus! Voluptate reprehenderit corrupti repellat rerum corporis! Exercitationem, odio dolorum! Sint officia quos est sequi consequuntur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi minus asperiores debitis molestiae autem eos aliquam, voluptates ab adipisci nisi provident dolorum, corrupti, quas aliquid quasi? Eaque numquam illo amet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ipsum possimus delectus consequatur suscipit qui necessitatibus ex a perspiciatis sunt iste, assumenda consectetur reprehenderit. Tenetur eius nobis et rem accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam officiis at, labore vitae architecto neque aperiam soluta fugit minima perspiciatis, ex sed nemo accusantium eveniet praesentium veritatis dicta earum adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, qui repellendus molestiae fuga delectus neque! Aut laborum beatae dolorum rem nobis facere vero, ipsa quisquam repellat quas accusantium alias in? sit amet, <strong>consectetur a Lorem  Lorem ipsum dolor sit amet consectetur adipisicing elit.</strong> Minima velit eum repellat temporibus dignissimos rerum itaque exercitationem accusantium ipsum qui eos possimus amet, voluptatum veritatis sit aspernatur ab quae assumenda. ipsum dolor sit amet consectetur adipisicing elit. Quo odio inventore harum voluptas, obcaecati fuga placeat eaque optio, ipsa in laudantium deleniti perspiciatis dignissimos molestiae aut vel fugit. Iste, laboriosam.Z dipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <p>Lorem Lorem ipsum, dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque impedit vel tenetur, numquam nobis quo incidunt quos dolor optio modi voluptatibus et est atque deleniti, sequi, labore unde quibusdam esse! adipisicing elit. Debitis quibusdam, tempore animi sapiente maiores excepturi fuga repudiandae eveniet explicabo odit quod, dignissimos nesciunt dolores. Explicabo sapiente possimus veniam omnis enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates cupiditate quibusdam veritatis, officia voluptate rem omnis quisquam ipsam nostrum accusamus doloribus quam autem eius Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto accusantium odit eveniet. Repellat assumenda praesentium expedita consequuntur unde fugit, culpa ad, dolor veritatis eius in, facere exercitationem quaerat fugiat at? harum earum quaerat dolores numquam optio! ipsum dolor sit amet, <strong>consectetur a Lorem  Lorem ipsum dolor sit amet consectetur adipisicing elit.</strong> Minima velit eum repellat temporibus dignissimos rerum itaque exercitationem accusantium ipsum qui eos possimus amet, voluptatum veritatis sit aspernatur ab quae assumenda. ipsum dolor sit amet consectetur adipisicing elit. Quo odio inventore harum voluptas, obcaecati fuga placeat eaque optio, ipsa in laudantium deleniti perspiciatis dignissimos molestiae aut vel fugit. Iste, laboriosam.Z dipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div> 
-    <br>
-    <!-- texto -->
+       
+       <!-- Seção de texto lado a lado para desktop -->
+    <div class="container mt-4">
+      <div class="row">
+          <div class="col-md-6">
+              <h2>Formulario</h2>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi voluptatem id possimus aspernatur, architecto cumque aliquid nobis natus sequi rerum neque labore sunt incidunt nulla blanditiis distinctio accusantium autem necessitatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo tempora dolores praesentium cumque ut placeat aliquid eaque voluptatem ullam vitae. Voluptates dolore aperiam possimus quia ipsam officiis deleniti repudiandae earum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, dolores voluptatum, ab sint incidunt et, delectus possimus reiciendis quaerat sequi corporis? Vero possimus officiis odio debitis hic distinctio accusantium autem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat iusto illo alias numquam recusandae porro ipsa vel laudantium cum nostrum. Reiciendis voluptas nisi sit, ipsa impedit qui eum amet. Suscipit?</p>
+          </div>
+          <div class="col-md-6">
+              <h2> Lorem</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nisi eum velit debitis iste exercitationem totam ex cumque sapiente nesciunt dolores quam, unde asperiores accusamus illo earum. Facilis, delectus animi?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem cupiditate consectetur, nesciunt libero neque veritatis, quaerat quo omnis dolor nisi necessitatibus provident commodi porro impedit suscipit dolore laborum nemo tempore? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt ab nobis explicabo quis modi nisi laudantium autem ipsam, delectus dolores. Ducimus esse, rem incidunt saepe natus cum adipisci veritatis ut.
+              </p>
+          </div>
+      </div>
+  </div>
+  
 
     <!-- formulario -->
     <form >
@@ -208,7 +228,7 @@
 
   <!-- Copyright -->
   <div class="text-center p-4">
-    © 2021 Copyright: HONEY FRESH
+    © 2024 Copyright: HONEY FRESH
   </div>
   <!-- Copyright -->
 </footer>
